fixed overflow issues

--- a/public/stylesheets/marketing.css
+++ b/public/stylesheets/marketing.css
@@ -442,6 +442,11 @@ body {
     display: inline;
 }
 
+.book-title{
+    overflow-x:auto;
+    overflow-y:hidden;
+    /*word-wrap: break-word;*/
+}
 
 .button-large{
     font-size: 140%;
